--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -12,7 +12,7 @@
 	    <table >
             <tr>
 	                <td width="210" height="175" id="logo">
-			         <a id="logoHome" rel="start home" href="plagiat ed.html">
+			         <a id="logoHome" rel="start home" href="index.html">
 				    <img src="images/logoplagiated.jpg" alt="Plagiat Editions"  />
 			</a>   
 			        </td>
