--- a/plagiat_ed_BD_ne_pas_mourir.html
+++ b/plagiat_ed_BD_ne_pas_mourir.html
@@ -12,8 +12,8 @@
 	    <table >
             <tr>
 	                <td width="210" height="175" id="logo">
-			         <a id="logoHome" rel="start home" href="plagiat ed.html">
-				    <img src="images/logoplagiated.jpg" alt="Plagiat Editions"  />
+			        <a id="logoHome" rel="start home" href="index.html">
+				    <img src="https://drive.google.com/uc?id=12csgnz9UYRP9CzWY4R_uXR5coniG5K3h" alt="Plagiat Editions"  />
 			</a>   
 			        </td>
 				
