--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -20,7 +20,7 @@
 					
 	                <td width="900" height="175" id="entete">
 					<a id="entetebd" rel="debutbd">
-				<img src="images/giletjaunes.jpg" alt="Plagiat Editions entête" />
+				<img src="https://drive.google.com/uc?id=1GUrva0hVa14rly11cyLV1dpJn85jB02Z" alt="Plagiat Editions entête" />
 			</a>
 			<figcaption><span><cite>Il faut des jeunes Français qui aient envie de devenir milliardaires.</cite> Macron<span></figcaption>
 			        </td>
