--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -82,7 +82,7 @@
 			    <tr>
 	                <td width="225" id="imagesdesbd">
 			            <a id="nepasmourircouv" rel="couverturedemamostedin" href="plagiat_ed_BD_ne_pas_mourir.html">
-			            <img src="BD-npmcc-Mamostedin/couverture.jpg" alt="couverturebdMamostedin" width="180" height="auto" /></a>
+			            <img src="https://drive.google.com/file/d/1ZWfoHwwlWHiiORTKBDbjK4ZTquk1Ed9B/view?usp=sharing" alt="couverturebdMamostedin" width="180" height="auto" /></a>
 			        </td>
 				
 					
@@ -102,7 +102,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
       <a id="affiche" rel="catalogue/bandesdessinees">
-				<img src="images/affichebd.jpg" alt="affichesnousnavonsrienanousqueletemps" width="300 " height="auto" />
+				<img src="https://drive.google.com/uc?id=1ZGLYOak881O3sM_HeJucngPpxCE4moCD" alt="affichesnousnavonsrienanousqueletemps" width="300 " height="auto" />
 			</a>
     </div>
   </div>
