--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -89,9 +89,9 @@
 	                <td width="350" id="textesdesbd">
 					<p><span><i><br>Ne pas mourir comme des chiens</i><span></p>
 					<p><span>de Mamoste Dîn<span></p>
-					<a href="BD-npmcc-Mamostedin/Ne pas mourir comme des chiens.pdf" title="Pdf">
+					<a href="https://drive.google.com/uc?id=1vk84F5lHgNQ-nn2ymgTuo4DSyD67UISD" title="Pdf">
 					<p><span><u>Ne pas mourir comme des chiens de&#8239;Mamoste&#8239;Dîn(.pdf)</u></a><span></p>
-					<a href="BD-npmcc-Mamostedin/We won't die the dog’s death.pdf" title="Pdf">
+					<a href="https://drive.google.com/uc?id=1J-naX-y-enJP2eQtpCgoZ0Selw46hz40" title="Pdf">
 					<p><span><u>We won't die the dog’s death by Mamoste&#8239;Dîn(eng.pdf)</u></a><span></p>
 			        </td>
 		        </tr>
