--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -82,7 +82,7 @@
 			    <tr>
 	                <td width="225" id="imagesdesbd">
 			            <a id="nepasmourircouv" rel="couverturedemamostedin" href="plagiat_ed_BD_ne_pas_mourir.html">
-			            <img src="https://drive.google.com/file/d/1ZWfoHwwlWHiiORTKBDbjK4ZTquk1Ed9B/view?usp=sharing" alt="couverturebdMamostedin" width="180" height="auto" /></a>
+			            <img src="https://drive.google.com/uc?id=1ZWfoHwwlWHiiORTKBDbjK4ZTquk1Ed9B" alt="couverturebdMamostedin" width="180" height="auto" /></a>
 			        </td>
 				
 					
