--- a/plagiat_ed_contacts.html
+++ b/plagiat_ed_contacts.html
@@ -73,6 +73,7 @@
 	<br>
 			<caption><span><h3>plagiatedition(at)protonmail.com</h3>
 			<h3>editions-plagiat-admin(at)protonmail</h3>
+			<h3>bd-graphisme-plagiat(at)protonmail.com</h3>
 			
 			
 			<br>Ne pas hésiter à utiliser ce mail pour nous relayer textes ou autres productions&#8239;.<span></caption>    
