--- a/plagiat_ed_BD_ne_pas_mourir.html
+++ b/plagiat_ed_BD_ne_pas_mourir.html
@@ -71,22 +71,22 @@
 	<br>
 	<br>
 		 <a id="partieune">
-				<img src="BD-npmcc-Mamostedin/pages.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=15eHYVmF9NmGJDefiRjAZxGIdLY_l8wMv" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie2">
-				<img src="BD-npmcc-Mamostedin/pages2.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1gecQp38USN0W6e5NmzN0I6GC7_oJXk_v" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie3">
-				<img src="BD-npmcc-Mamostedin/pages3.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1AnbWKyAi0DF3nwlCKwqsBSUNxp6jw4dr" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie4">
-				<img src="BD-npmcc-Mamostedin/pages4.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1bjTGCPh0onEND6UIepMMsAfjxg8ZGbAp" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>	
           <a id="partie5">
-				<img src="BD-npmcc-Mamostedin/pages5.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1-d9uA9r0j6DTxzdhXiAHP_KsVmDzP1ig" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie6">
-				<img src="BD-npmcc-Mamostedin/pages6.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1vxfETmcPdKYRWnnqEO432nnCWpLKar9W" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie7">
 				<img src="BD-npmcc-Mamostedin/pages7.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
