--- a/plagiat_ed_BD_ne_pas_mourir.html
+++ b/plagiat_ed_BD_ne_pas_mourir.html
@@ -89,25 +89,25 @@
 				<img src="https://drive.google.com/uc?id=1vxfETmcPdKYRWnnqEO432nnCWpLKar9W" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie7">
-				<img src="BD-npmcc-Mamostedin/pages7.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1T6upQkvFKwra8D90GDWHdMmN1C3QiOYk" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie8">
-				<img src="BD-npmcc-Mamostedin/pages8.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1jCz-v7U7YC-6JV2S1_V6QBUdy_8JzHvw" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
           <a id="partie9">
-				<img src="BD-npmcc-Mamostedin/pages9.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1-QBlmItr22IIrmhf66ermp51Ri0cyuzK" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie10">
-				<img src="BD-npmcc-Mamostedin/pages10.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1fR7yhqxNdPNMen4SYNmP42a4Vx-iFRxh" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie11">
-				<img src="BD-npmcc-Mamostedin/pages11.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1VWDaYZdplK0vHpt4-kw_lqT9voEQeu3-" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie12">
-				<img src="BD-npmcc-Mamostedin/pages12.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1WXFWxsoMCyc6p1yRa8y02o-o_gzcgoOu" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 				
          <a id="partieune">
-				<img src="BD-npmcc-Mamostedin/pages13.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1uc1K3OtosbSFQkQ9z4Wsr5g_XeU0bl5g" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie2">
 				<img src="BD-npmcc-Mamostedin/pages14.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
