--- a/plagiat_ed_BD_ne_pas_mourir.html
+++ b/plagiat_ed_BD_ne_pas_mourir.html
@@ -110,37 +110,37 @@
 				<img src="https://drive.google.com/uc?id=1uc1K3OtosbSFQkQ9z4Wsr5g_XeU0bl5g" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie2">
-				<img src="BD-npmcc-Mamostedin/pages14.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1erHku2YHgOhbZH5jaDax8PHewt15lMGZ" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie3">
-				<img src="BD-npmcc-Mamostedin/pages15.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1g6QhXr2Pt_DdsyAw-6XHYMKMHqVn0ALb" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie4">
-				<img src="BD-npmcc-Mamostedin/pages16.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1uFh-FUB-BRdXAjiPa5nqH6D76iBbaVkn" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>	
           <a id="partie5">
-				<img src="BD-npmcc-Mamostedin/pages17.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1rWEI9zaiAIZM2Dzf9fkDP-Kkx4Le7Z9u" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie6">
-				<img src="BD-npmcc-Mamostedin/pages18.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1Pf4kJ90VDr74uC-ydsMjfCgbJ38ZaJRd" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie7">
-				<img src="BD-npmcc-Mamostedin/pages19.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1q63KxlK01Pa-_VI6lPQJSyBZDYM6Gh6P" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie8">
-				<img src="BD-npmcc-Mamostedin/pages20.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1F6X-aFpIwiu3MRzMmW1mDSwjpC77LUON" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
           <a id="partie9">
-				<img src="BD-npmcc-Mamostedin/pages21.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1uAoOYN0E6DaxwLg0OxIm4Z-WHopXXi_X" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie10">
-				<img src="BD-npmcc-Mamostedin/pages22.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1v6RGUmpLpupbXt-lpNLYbzuDnAhqn0-O" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie11">
-				<img src="BD-npmcc-Mamostedin/pages23.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=18T0RtM6iXN7wGrNZoATDL9GkSV0RtQaG" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie12">
-				<img src="BD-npmcc-Mamostedin/pages24.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=19_j9tI9m9fxSmvaAauisETSj2Myc2r4L" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 				
 			<a id="partieune">
 				<img src="BD-npmcc-Mamostedin/pages25.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
