--- a/plagiat_ed_BD_ne_pas_mourir.html
+++ b/plagiat_ed_BD_ne_pas_mourir.html
@@ -142,43 +142,43 @@
          <a id="partie12">
 				<img src="https://drive.google.com/uc?id=19_j9tI9m9fxSmvaAauisETSj2Myc2r4L" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 				
-			<a id="partieune">
-				<img src="BD-npmcc-Mamostedin/pages25.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+	<a id="partieune">
+				<img src="https://drive.google.com/uc?id=1cm4uKjM0TSbvONlnuhlIt8c3ELGN04Ny" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie2">
-				<img src="BD-npmcc-Mamostedin/pages26.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1H2SYz2r4Tzu_npEjqyLjwTBFY5VHcwJF" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie3">
-				<img src="BD-npmcc-Mamostedin/pages27.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1INCA3mxLsJeEpVxLspBCewhvYI7gx2O4" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie4">
-				<img src="BD-npmcc-Mamostedin/pages28.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1ETBA_ZZWv2MVSQH47n957LoQqobMl4R8" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>	
           <a id="partie5">
-				<img src="BD-npmcc-Mamostedin/pages29.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1Ief67uVFtAm9kbcqU4d9RTVBwwD8q-EF" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie6">
-				<img src="BD-npmcc-Mamostedin/pages30.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1oL99xJqsIflSWrVZjd7EYrmOe4okuoQz" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie7">
-				<img src="BD-npmcc-Mamostedin/pages31.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1Q_18yFHi9fBGIXPkU-lSHg5UxqdOiPpX" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie8">
-				<img src="BD-npmcc-Mamostedin/pages32.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1ladXQV7Qkt_S59t8EUfO26YNHx_vqU7l" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
           <a id="partie9">
-				<img src="BD-npmcc-Mamostedin/pages33.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1v4pS1o7oOktDhqiMxzqqEK_7OiKLHUfc" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie10">
-				<img src="BD-npmcc-Mamostedin/pages34.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1JJDOawxZ518WhaA7zIBnbm5gKNJ8bcfw" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie11">
-				<img src="BD-npmcc-Mamostedin/pages35.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1fWtaStp-iJORStP928cdkLuaYTQ6QHlk" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie12">
 				<img src="BD-npmcc-Mamostedin/pages36.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 				
-			<a id="partieune">
+	<a id="partieune">
 				<img src="BD-npmcc-Mamostedin/pages37.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie2">
