--- a/plagiat_ed_BD_ne_pas_mourir.html
+++ b/plagiat_ed_BD_ne_pas_mourir.html
@@ -176,7 +176,7 @@
 				<img src="https://drive.google.com/uc?id=1fWtaStp-iJORStP928cdkLuaYTQ6QHlk" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie12">
-				<img src="BD-npmcc-Mamostedin/pages36.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1m1AyoO3zRrV8E1cCiFYZGtrqHyw5Bf8y" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 				
 	<a id="partieune">
 				<img src="BD-npmcc-Mamostedin/pages37.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
