--- a/plagiat_ed_BD_ne_pas_mourir.html
+++ b/plagiat_ed_BD_ne_pas_mourir.html
@@ -179,46 +179,46 @@
 				<img src="https://drive.google.com/uc?id=1m1AyoO3zRrV8E1cCiFYZGtrqHyw5Bf8y" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 				
 	<a id="partieune">
-				<img src="BD-npmcc-Mamostedin/pages37.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1e_YTbEL2PrFGSKRZIYdIAVHzUBkgsH5b" alt="Ne pas mourir comme des chiens de Mamoste Din p37" width="850" height="auto" />
 			</a> 
          <a id="partie2">
-				<img src="BD-npmcc-Mamostedin/pages38.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1a2IAsP15tmxw9rNFiOOuwNZlug4wctmJ" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie3">
-				<img src="BD-npmcc-Mamostedin/pages39.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1ZJmBDMa8r5xQNyNKX1OjzSBqB-R7lG45" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie4">
-				<img src="BD-npmcc-Mamostedin/pages40.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1XETGNjJ4iSPLFxpbhNtjQOhS0SMGtcVo" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>	
           <a id="partie5">
-				<img src="BD-npmcc-Mamostedin/pages41.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1SpywvTYxcjy1atIlfHkWD35JXgmj-iQm" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie6">
-				<img src="BD-npmcc-Mamostedin/pages42.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=11F1D2UcpmSyvupzXQ9fAWAk73CcEZuW0" alt="Ne pas mourir comme des chiens de Mamoste Din p 42" width="850" height="auto" />
 			</a>
          <a id="partie7">
-				<img src="BD-npmcc-Mamostedin/pages43.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=18GEZ80x4xnvTooXHdXsHtsYip4UAPq3Z" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie8">
-				<img src="BD-npmcc-Mamostedin/pages44.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1H-tpF3h6sWLcOXTGGWkRyQJiCsjjM151" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
           <a id="partie9">
-				<img src="BD-npmcc-Mamostedin/pages45.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1Hyn9FwNeeZJhrFeX8Hawr7CsY4RPT9r2" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie10">
-				<img src="BD-npmcc-Mamostedin/pages46.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=19baHevTo_hFX9o_LVrJSspVrydKmDmeZ" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie11">
-				<img src="BD-npmcc-Mamostedin/pages47.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1uaeE_BfadTSlz4OQEe08oQL8BDOuauuq" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie12">
-				<img src="BD-npmcc-Mamostedin/pages48.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1tuBpEaaM5l_wV7UUrwQjU-OXcmthuymB" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 				
-			<a id="partieune">
-				<img src="BD-npmcc-Mamostedin/pages49.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+	<a id="partieune">
+				<img src="https://drive.google.com/uc?id=1HI8v1wkEGyMff_TUcz1zZt_EOTwzSjYD" alt="Ne pas mourir comme des chiens de Mamoste Din p 49" width="850" height="auto" />
 			</a> 
          <a id="partie2">
-				<img src="BD-npmcc-Mamostedin/pages50.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1I2rEom_ymWMslqkSTQjC3DhAwnbN_0Wc" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie3">
 				<img src="BD-npmcc-Mamostedin/pages51.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
