--- a/plagiat_ed_BD_ne_pas_mourir.html
+++ b/plagiat_ed_BD_ne_pas_mourir.html
@@ -221,52 +221,52 @@
 				<img src="https://drive.google.com/uc?id=1I2rEom_ymWMslqkSTQjC3DhAwnbN_0Wc" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie3">
-				<img src="BD-npmcc-Mamostedin/pages51.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=13SnWz5GVeNkizWafbIYWuVhx1cb8_O-h" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie4">
-				<img src="BD-npmcc-Mamostedin/pages52.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1UpzZSPoAOkm5bh1kWyrTVDigNItFy7hl" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>	
           <a id="partie5">
-				<img src="BD-npmcc-Mamostedin/pages53.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=19ZsW0UBTDEDYqbwoujhxjIyi_tvaFRjo" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie6">
-				<img src="BD-npmcc-Mamostedin/pages54.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1q1_7vTWP82vzYqIW5UGWp--S8NRcexgq" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie7">
-				<img src="BD-npmcc-Mamostedin/pages55.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1XNA7bKRr97viLiMDE_ncPXIukNKJDruy" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie8">
-				<img src="BD-npmcc-Mamostedin/pages56.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1QTVMptuL_TSoYKAaWaVYynaXCBu00n98" alt="Ne pas mourir comme des chiens de Mamoste Din p 56" width="850" height="auto" />
 			</a>
           <a id="partie9">
-				<img src="BD-npmcc-Mamostedin/pages57.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1yRZWJmKLEt8fS6f8iJKH8Bh9JhY_0tBj" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie10">
-				<img src="BD-npmcc-Mamostedin/pages58.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=18_bfFZMAc8j5nJIe7uc0OAh1O-lMHg2w" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie11">
-				<img src="BD-npmcc-Mamostedin/pages59.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1UHGDiXOwHjuFBfVT4FQFLu5DGOaOQ0e7" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie12">
-				<img src="BD-npmcc-Mamostedin/pages60.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=14JOZGjrSeJnkr0sI_jrrHnXinsK9Ttd5" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
             
-			<a id="partieune">
-				<img src="BD-npmcc-Mamostedin/pages61.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+	<a id="partieune">
+				<img src="https://drive.google.com/uc?id=1PxOhMN2FRYuSLQBEV7v_-xNZDDASgIlq" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie2">
-				<img src="BD-npmcc-Mamostedin/pages62.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1r1lNsCNOpB_MUI6qdbXLqbVvH7frhcfo" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie3">
-				<img src="BD-npmcc-Mamostedin/pages63.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=13h3N_vy1fluWgMXvU6wYvdrK42XnpxT9" alt="Ne pas mourir comme des chiens de Mamoste Din p 63" width="850" height="auto" />
 			</a>
          <a id="partie4">
-				<img src="BD-npmcc-Mamostedin/pages64.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1hysf-OcrdAiZNkYgVhBzAqrS8xwSxEKW" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>	
           <a id="partie5">
-				<img src="BD-npmcc-Mamostedin/pages65.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1fw759NS0wMJPCd2eYg_p91O_ltZEiFdm" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie6">
-				<img src="BD-npmcc-Mamostedin/pages66.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1hzFnaKTSIlhQA56XvL2klbXqqLxtJHvb" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie7">
 				<img src="BD-npmcc-Mamostedin/pages67.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
