--- a/plagiat_ed_socle_théorique.html
+++ b/plagiat_ed_socle_théorique.html
@@ -20,7 +20,7 @@
 					
 	                <td width="900" height="175" id="entete">
 			<a id="enteteaction-histoire" rel="elephant">
-				<img src="images/pagehistoire2.jpg" alt="Plagiat Editions entête"  />
+				<img src="https://drive.google.com/uc?id=1iXfxNW0s6AJHM9i2_OT3xuwDLPO9KWRQ" alt="Plagiat Editions entête"  />
 			</a>
 			<figcaption><span><cite>Les pauvres sont coupables de l'existence des riches.</cite> Stirner<span></figcaption>
 			        </td>
@@ -86,13 +86,13 @@
 			    <tr>
 	                <td width="200" id="illu1843"><br>
 			                <a id="legende" rel="article" href="plagiat_ed_histoire-critique-hegel.html">
-			                <img src="Histoire-critique-hegel/ramoneur.jpg" alt="1843" width="200" height="auto" /></a>
+			                <img src="https://drive.google.com/uc?id=1i8gr55xGslcphIkOT65V0a4dY87iACqZ" alt="1843" width="200" height="auto" /></a>
 			            </td>
 						
 	                    <td width="325" id="protestations">
 						<p><span><i><br>Contribution à la critique de La philosophie du droit de Hegel</i><span></p>
                             <p><span>1843, par Karl Marx <span></p> 
-							<a href="Histoire-critique-hegel/km1843.pdf" title="Pdf">
+							<a href="https://drive.google.com/file/d/1i6x_DSKdEqMiWmqvAsEZeejQyVsxmmnB/view?usp=sharing" title="Pdf">
 							<p><span><u>Contribution à la critique de La philosophie du droit de Hegel(.pdf)</u></a><span></p>
 			            </td>
 		            </tr>
@@ -292,7 +292,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
       <a id="affiche" rel="catalogue/histoire">
-				<img src="images/affiche120.jpg" alt="affiche120corps" width="300" height="auto" />
+				<img src="https://drive.google.com/uc?id=1TvYWZuSO4KTrjrvLx8jnqsg2ZXCgmTPX" alt="affiche120corps" width="300" height="auto" />
 			</a>
     </div>
   </div>
