--- a/plagiat_ed_histoire-critique-hegel.html
+++ b/plagiat_ed_histoire-critique-hegel.html
@@ -157,7 +157,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-       <img src="Histoire-critique-hegel/ramoneur.jpg" alt="détournement" width="350" height="auto" id="legende" /></a>
+       <img src="https://drive.google.com/uc?id=1i8gr55xGslcphIkOT65V0a4dY87iACqZ" alt="Les raboteurs" width="350" height="auto" id="legende" /></a>
     </div>
   </div>
 </div>
