--- a/plagiat_ed_socle_théorique.html
+++ b/plagiat_ed_socle_théorique.html
@@ -103,13 +103,13 @@
 			    <tr>
 	                <td width="200" id="illu1937"><br>
 			                <a id="legende" rel="article" href="plagiat_ed_histoire_protestations-1937.html">
-			                <img src="Histoire-protestation-1937/1937couv.jpg" alt="1967" width="200" height="auto" /></a>
+			                <img src="https://drive.google.com/uc?id=1F8cfpWlbpv3AOqKJna-c_rtZPpvJLj0a" alt="1967" width="200" height="auto" /></a>
 			            </td>
 						
 	                    <td width="325" id="protestations">
 						<p><span><i><br>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i><span></p>
                             <p><span>Par un Incontrôlé de la Colonne de Fer <span></p> 
-							<a href="Histoire-protestation-1937/Protestation devant les libertaires du présent et du futur sur les capitulations de 1937.pdf" title="Pdf">
+							<a href="https://drive.google.com/uc?id=1fkco3cPv8tLMiN_smR7tT5zF1AJjImxP" title="Pdf">
 							<p><span><u>Protestation devant les libertaires du présent et du&#8239;futur&#8239;sur&#8239;les&#8239;capitulations&#8239;de&#8239;1937(.pdf)</u></a><span></p>
 			            </td>
 		            </tr>
