--- a/plagiat_ed_histoire_protestations-1937.html
+++ b/plagiat_ed_histoire_protestations-1937.html
@@ -545,7 +545,7 @@ spectacle</i>, thèse 101)<span></p>
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-      <img src="Histoire-protestation-1937/illustrationmamostedîn.jpg" alt="1937" width="350" height="auto" id="legende"/></a>
+      <img src="https://drive.google.com/uc?id=15lMHf1AqC2KaYiA4JMSNjv2x4gMvBVvh" alt="1937" width="350" height="auto" id="illustrationmamostedîn"/></a>
     </div>
   </div>
 </div>
