--- a/plagiat_ed_histoire_lettre_socialisme_barbarie.html
+++ b/plagiat_ed_histoire_lettre_socialisme_barbarie.html
@@ -117,7 +117,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-       <img src="Histoire-Lettre-Socialisme-Barbarie/pannoeckdessins.jpg" alt="détournement" width="350" height="auto" id="legende" /></a>
+       <img src="https://drive.google.com/uc?id=1fiYMiYO4qmG7oaMvZ3LONZkzypq9X9ve" alt="détournement" width="350" height="auto" id="legende" /></a>
     </div>
   </div>
 </div>
