--- a/plagiat_ed_histoire_la_commune.html
+++ b/plagiat_ed_histoire_la_commune.html
@@ -107,7 +107,7 @@
 <p>La démolition du monument eut lieu le 8 mai suivant.</p>
 <p>Le maréchal de Mac-Mahon, décide en mai 1873 de faire reconstruire la colonne Vendôme aux frais de Gustave Courbet (soit 323 091,68 francs selon le devis établi).<span></p>
 <p><span>Annexe à propos de Courbet</p><span>
-                    <a href="Histoire-la-commune/Courbet pendant la commune.pdf" title="Pdf">
+                    <a href="https://drive.google.com/uc?id=1LYqcHR_SCtqqzK54AsBthIz-10ToCHlz" title="Pdf">
 						<p><span><u>Courbet pendant la commune(.pdf)</u><span></p></a>
 						</a>
 
@@ -128,7 +128,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-       <img src="Histoire-la-commune/IS commune2.jpg" alt="détournement" width="350" height="auto" id="legende" /></a>
+       <img src="https://drive.google.com/uc?id=1VZEk22n_Rw5DLu9jaGcg-3kAn6d_E-7D" alt="détournement" width="350" height="auto" id="legende" /></a>
     </div>
   </div>
 </div>
