--- a/plagiat_ed_histoire_is.html
+++ b/plagiat_ed_histoire_is.html
@@ -148,7 +148,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-       <img src="Histoire-IS/détournement.jpg" alt="détournement" width="350" height="auto" id="legende" /></a>
+       <img src="https://drive.google.com/uc?id=1YYej3ubAZN-uY2ApJhltatuFosA-RkNf" alt="détournement" width="350" height="auto" id="détournements" /></a>
     </div>
   </div>
 </div>
