--- a/plagiat_ed_socle_théorique.html
+++ b/plagiat_ed_socle_théorique.html
@@ -163,14 +163,14 @@
 				<tr>
 	                    <td width="200" id="illuslénine">
 			                <a id="lenine" rel="liens" href="plagiat_ed_histoire_misère-milieu-étudiants.html">
-			                <img src="Histoire-misère-milieu-étudiant/lenine.jpg" alt="léninequantaujcrmoiaussijelesencule" width="200" height="auto" /></a>
+			                <img src="https://drive.google.com/uc?id=1tSJHSR7gVMJrAxVPhbBg2sjGbRMfMyzR" alt="léninequantaujcrmoiaussijelesencule" width="200" height="auto" /></a>
 			            </td>
 						
 							
 	                    <td width="325" id="misèreétudiant">
 						<p><span><i><br>De la misère en milieu étudiant</i><span></p>
 						<p><span>1966, strasbourg, par des membre de l'I.S. et des étudiants<span></p>
-						<a href="Histoire-misère-milieu-étudiant/De la misere en milieu etudiant.pdf" title="Pdf">
+						<a href="https://drive.google.com/uc?id=1ULWox9zKKSiw0Uo9fjH1tKsNFB7RaX5u" title="Pdf">
 						<p><span><u>De la misere en milieu etudiant (.pdf)</u><span></p></a>
 						</a>
 			            </td>
