--- a/plagiat_ed_histoire_misère-milieu-étudiants.html
+++ b/plagiat_ed_histoire_misère-milieu-étudiants.html
@@ -241,7 +241,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-       <img src="https://drive.google.com/uc?id=1ULWox9zKKSiw0Uo9fjH1tKsNFB7RaX5u" alt="détournement" width="350" height="auto" id="legende" /></a>
+       <img src="https://drive.google.com/uc?id=1UgOEOM_VsmwaJhoQW2906fLD_YCNsXJr" alt="détournements" width="350" height="auto" id="legende" /></a>
     </div>
   </div>
 </div>
