--- a/plagiat_ed_histoire_mouvement_rev_congolais.html
+++ b/plagiat_ed_histoire_mouvement_rev_congolais.html
@@ -128,7 +128,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-       <img src="Histoire-revolution-congo/photoscongo.jpg" alt="détournement" width="350" height="auto" id="legende" /></a>
+       <img src="https://drive.google.com/uc?id=1NuSfY2J0BAr5WTQMQm2RPEh58Ta0gx4_" alt="détournement" width="350" height="auto" id="legende" /></a>
     </div>
   </div>
 </div>
