--- a/plagiat_ed_histoire_société-spectacle.html
+++ b/plagiat_ed_histoire_société-spectacle.html
@@ -100,7 +100,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-      <img src="Histoire-société-du-spectacle/cinema.jpg" alt="1937" width="350" height="auto" id="legende"/></a>
+      <img src="https://drive.google.com/uc?id=1gtbXe6NCUu5Epj5-4lx1WBPv6vqSIt4z" alt="1937" width="350" height="auto" id="legende"/></a>
     </div>
   </div>
 </div>
