--- a/plagiat_ed_histoire_SdS_chap_1.html
+++ b/plagiat_ed_histoire_SdS_chap_1.html
@@ -169,7 +169,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-      <img src="Histoire-société-du-spectacle/chapitre_1.jpg" alt="1937" width="350" height="auto" id="legende"/></a>
+      <img src="https://drive.google.com/uc?id=1BL9rWZGZLU4c5GLAGMYUsDwGNR4CGTmL" alt="1937" width="350" height="auto" id="legende"/></a>
     </div>
   </div>
 </div>
