--- a/plagiat_ed_histoire_SdS_chap_2.html
+++ b/plagiat_ed_histoire_SdS_chap_2.html
@@ -182,7 +182,7 @@ Le sujet ne peut &eacute;merger que de la soci&eacute;t&eacute;, c'est &agrave; 
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-      <img src="Histoire-société-du-spectacle/chapitre_2.jpg" alt="1937" width="350" height="auto" id="legende"/></a>
+      <img src="https://drive.google.com/uc?id=1aIPFYXvDVTCpQYxJxmQ1og4Nd2W-_TX_" alt="1937" width="350" height="auto" id="legende"/></a>
     </div>
   </div>
 </div>
