--- a/plagiat_ed_histoire_SdS_chap_3.html
+++ b/plagiat_ed_histoire_SdS_chap_3.html
@@ -161,7 +161,7 @@ Ce qui met en relation les hommes affranchis de leurs limitations locales et nat
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-      <img src="Histoire-société-du-spectacle/chapitre_3.jpg" alt="1937" width="350" height="auto" id="legende"/></a>
+      <img src="https://drive.google.com/uc?id=1RFBW2Xka1O2_U2P7__DhbqG6w3GnfL8P" alt="1937" width="350" height="auto" id="legende"/></a>
     </div>
   </div>
 </div>
