--- a/plagiat_ed_histoire_SdS_chap_4.html
+++ b/plagiat_ed_histoire_SdS_chap_4.html
@@ -374,7 +374,7 @@ Le d&eacute;veloppement m&ecirc;me de la soci&eacute;t&eacute; de classes jusqu'
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-      <img src="Histoire-société-du-spectacle/chapitre_4.jpg" alt="1937" width="350" height="auto" id="legende"/></a>
+      <img src="https://drive.google.com/uc?id=1xEzVCMwFOfghRokHbqzS4R2K8U65zCGi" alt="1937" width="350" height="auto" id="legende"/></a>
     </div>
   </div>
 </div>
