--- a/plagiat_ed_histoire_SdS_chap_5.html
+++ b/plagiat_ed_histoire_SdS_chap_5.html
@@ -207,7 +207,7 @@ Mais cette histoire qui partout &agrave; la fois est la m&ecirc;me, n'est encore
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-      <img src="Histoire-société-du-spectacle/chapitre_5.jpg" alt="1937" width="350" height="auto" id="legende"/></a>
+      <img src="https://drive.google.com/uc?id=1kGY-e3Ml9PyZ6oWr7p-dfbEgN8H-A58b" alt="1937" width="350" height="auto" id="legende"/></a>
     </div>
   </div>
 </div>
