--- a/plagiat_ed_histoire_SdS_chap_6.html
+++ b/plagiat_ed_histoire_SdS_chap_6.html
@@ -158,7 +158,7 @@ C'est le programme d'une r&eacute;alisation totale, dans le milieu du temps, du 
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-      <img src="Histoire-société-du-spectacle/chapitre_6.jpg" alt="1937" width="350" height="auto" id="legende"/></a>
+      <img src="https://drive.google.com/uc?id=1N4hO6FRRYcYIiS-CpYxOOdoX388N76eG" alt="1937" width="350" height="auto" id="legende"/></a>
     </div>
   </div>
 </div>
