--- a/plagiat_ed_histoire_SdS_chap_7.html
+++ b/plagiat_ed_histoire_SdS_chap_7.html
@@ -156,7 +156,7 @@ Et le pouvoir des Conseils, qui ne peut &ecirc;tre effectif qu'en transformant l
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-      <img src="Histoire-société-du-spectacle/chapitre_7.jpg" alt="1937" width="350" height="auto" id="legende"/></a>
+      <img src="https://drive.google.com/uc?id=1dxL05Cksk2eHs0UTLJYKGovou0H8QO4w" alt="1937" width="350" height="auto" id="legende"/></a>
     </div>
   </div>
 </div>
