--- a/plagiat_ed_histoire_SdS_chap_8.html
+++ b/plagiat_ed_histoire_SdS_chap_8.html
@@ -231,7 +231,7 @@ Le d&eacute;tournement n'a fond&eacute; sa cause sur rien d'ext&eacute;rieur &ag
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-      <img src="Histoire-société-du-spectacle/chapitre_8.jpg" alt="1937" width="350" height="auto" id="legende"/></a>
+      <img src="https://drive.google.com/uc?id=1SY67r9z4MwuuJyHg8GQklu-NlLPTs6j_" alt="1937" width="350" height="auto" id="legende"/></a>
     </div>
   </div>
 </div>
