--- a/plagiat_ed_histoire_SdS_chap_9.html
+++ b/plagiat_ed_histoire_SdS_chap_9.html
@@ -147,7 +147,7 @@ L&agrave; seulement o&ugrave; les individus sont &#171;directement li&eacute;s &
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-      <img src="Histoire-société-du-spectacle/chapitre_9.jpg" alt="1937" width="350" height="auto" id="legende"/></a>
+      <img src="https://drive.google.com/uc?id=1agZ9cb9ik37v34gX6un0nSbLU4T0bGhj" alt="1937" width="350" height="auto" id="legende"/></a>
     </div>
   </div>
 </div>
