--- a/plagiat_ed_histoire_la_planète_malade.html
+++ b/plagiat_ed_histoire_la_planète_malade.html
@@ -117,7 +117,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-       <img src="Histoire-planète-malade/mer aral.jpg" alt="détournement" width="350" height="auto" id="legende" /></a>
+       <img src="https://drive.google.com/uc?id=1I2ann4nGfmd0rL_Z2bRI6dARB0n36KAB" alt="détournement" width="350" height="auto" id="legende" /></a>
     </div>
   </div>
 </div>
