--- a/plagiat_ed_histoire_VR_chap_1.html
+++ b/plagiat_ed_histoire_VR_chap_1.html
@@ -133,7 +133,7 @@
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-      <img src="Histoire-veridique-rapport/cinema.jpg" alt="1937" width="350" height="auto" id="legende"/></a>
+      <img src="https://drive.google.com/uc?id=1ixrqvNG79i-pj4N2ZMXva8gydt0W43Ty" alt="1937" width="350" height="auto" id="legende"/></a>
     </div>
   </div>
 </div>
