--- a/plagiat_ed_histoire_VR_chap_5.html
+++ b/plagiat_ed_histoire_VR_chap_5.html
@@ -184,7 +184,7 @@ Aux limbes, chez les autres nouveau-nés !&#8239;»</i> (Machiavel)</sub></p>
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-      <img src="Histoire-veridique-rapport/censor.jpg" alt="1937" width="350" height="auto" id="legende"/></a>
+      <img src="https://drive.google.com/uc?id=1ixrqvNG79i-pj4N2ZMXva8gydt0W43Ty" alt="1937" width="350" height="auto" id="legende"/></a>
     </div>
   </div>
 </div>
