--- a/plagiat_ed_histoire_VR_chap_6.html
+++ b/plagiat_ed_histoire_VR_chap_6.html
@@ -499,7 +499,7 @@ Verts et les Bleus, dans un monde qui se sera
   <div class="col-3 col-s-12">
     <div class="aside">
 	<a>
-      <img src="Histoire-veridique-rapport/censor.jpg" alt="1937" width="350" height="auto" id="legende"/></a>
+      <img src="https://drive.google.com/uc?id=1ixrqvNG79i-pj4N2ZMXva8gydt0W43Ty" alt="1937" width="350" height="auto" id="legende"/></a>
     </div>
   </div>
 </div>
