--- a/plagiat_ed_boutique_npmcc.html
+++ b/plagiat_ed_boutique_npmcc.html
@@ -77,7 +77,16 @@
 			<caption><span>La boutique existe pour les produits imprimés de nos éditions, pour celles et ceux qui préféreraient un format 
 			papier au format numérique disponible en libre accès sur notre site.
 			<br>Lecture en ligne disponible selon le genre dans les différentes catégories du&#8239;Menu<span></caption>   
-	         
+				<p><span>Les luttes se croisent et se ressemblent, comme celles des
+Kurdes et des gilets jaunes. Le même combat pour la liberté
+et l'égalité sociale rencontre la même répression.
+La dessinatrice Mamoste Dîn nous fait découvrir le camp
+autogéré d'exilés kurdes de Lavrio en Grèce. Dans un subtil
+va?et?vient entre la Grèce et la France, entre les histoires
+personnelles et les combats politiques des activistes kurdes
+et de la jeune Judith, venue documenter leur quotidien, nous
+partageons un moment de la vie du camp et apprenons à
+connaître et à aimer ses habitants.</p><span>
             <br>
 			    <tr>
 			        <td width="250" id="imagesdesbd"><br>
