--- a/plagiat_ed_boutique_npmcc.html
+++ b/plagiat_ed_boutique_npmcc.html
@@ -74,10 +74,10 @@
 	
 	<br>
 	<br>
-			<caption><span>La boutique existe pour les produits imprimés de nos éditions, pour celles et ceux qui préféreraient un format 
+			<p><span>La boutique existe pour les produits imprimés de nos éditions, pour celles et ceux qui préféreraient un format 
 			papier au format numérique disponible en libre accès sur notre site.
-			<br>Lecture en ligne disponible selon le genre dans les différentes catégories du&#8239;Menu<span></caption>   
-				<p><span>Les luttes se croisent et se ressemblent, comme celles des
+			<br>Lecture en ligne disponible selon le genre dans les différentes catégories du&#8239;Menu<span></p>   
+				<br><p><span>Les luttes se croisent et se ressemblent, comme celles des
 Kurdes et des gilets jaunes. Le même combat pour la liberté
 et l'égalité sociale rencontre la même répression.
 La dessinatrice Mamoste Dîn nous fait découvrir le camp
