--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Edition Plagiat essais</title>  
+<title>Edition Plagiat corpus</title>  
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
 <link rel="stylesheet" href="plagiat_ed_corpus.css" />
 </head>
