--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -72,7 +72,7 @@
 	
 	<br>
 	<br>
-			<caption><span><h3>Recueil thématique&#8239;.</h3>&#8239;.<span></caption>    
+			<caption><span><h3>Recueil thématique&#8239;.</h3>&#8239;(Contenu à venir).<span></caption>    
 	         
             <br>
 			
